# idmind_ros

./: LICENSE  README.md
idmind_ancillary/idmind_ancillary/: CMakeLists.txt  package.xml
idmind_ancillary/idmind_obstacle_detection/: CMakeLists.txt  package.xml
idmind_ancillary/idmind_obstacle_detection/src/: laser_obstacle_detector.cpp
idmind_ancillary/idmind_utilities/: CMakeLists.txt  package.xml  wheel_speed_calibration.launch
idmind_ancillary/idmind_utilities/src/: pose_initializer.cpp  wheel_speed_calibration.cpp
idmind_robot/idmind_arms/: CMakeLists.txt
idmind_robot/idmind_arms/include/idmind_arms/: idmind_arms.h
idmind_robot/idmind_arms/src/: idmind_arms.cpp
idmind_robot/idmind_behaviours/: CMakeLists.txt  package.xml
idmind_robot/idmind_behaviours/include/idmind_behaviours/: idmind_behaviours.h
idmind_robot/idmind_behaviours/src/: idmind_behaviours.cpp  read_files.cpp
idmind_robot/idmind_imu/: CMakeLists.txt
idmind_robot/idmind_interaction/: CMakeLists.txt
idmind_robot/idmind_interaction/include/idmind_interaction/: idmind_interaction.h
idmind_robot/idmind_interaction/src/: idmind_interaction.cpp  mouth_encoder.cpp
idmind_robot/idmind_motors/: CMakeLists.txt
idmind_robot/idmind_motors/include/idmind_motors/: idmind_motors.h
idmind_robot/idmind_motors/src/: idmind_motors.cpp
idmind_robot/idmind_odometry/: CMakeLists.txt
idmind_robot/idmind_odometry/src/: idmind_odometry.cpp
idmind_robot/idmind_robot/: package.xml
idmind_robot/idmind_sensors/: CMakeLists.txt
idmind_robot/idmind_sensors/include/idmind_sensors/: idmind_sensors.h
idmind_robot/idmind_sensors/src/: idmind_sensors.cpp
idmind_robot/idmind_sensors/srv/: Batteries.srv
idmind_robot/idmind_teleoperation/: CMakeLists.txt
idmind_robot/idmind_teleoperation/include/idmind_teleoperation/: idmind_teleoperation.h
idmind_robot/idmind_teleoperation/src/: idmind_teleoperation.cpp
no_build/: package.xml
no_build/config/behaviours/: behaviours.txt
no_build/config/costmap/omni/: common.yaml
no_build/config/params/: 2wd.yaml  omni.yaml
no_build/config/udev_rules/: 10-2wd.rules  11-projector.rules
no_build/launch/: idmind_amcl.launch  idmind_base.launch  idmind_odometry.launch  lasers.launch
no_build/scripts/: image.sh  sound.sh  video.sh
